Adicionando a componente produto mes e adicionando o efeito hover e o botão carrinho e itens semaelhantes apenas em um unico card para depois replicar em outros..

--- a/src/app/components/banner-informativo/banner-informativo.component.html
+++ b/src/app/components/banner-informativo/banner-informativo.component.html
@@ -1,6 +1,6 @@
 <div class="banner-informativos h-[40rem] bg-blue-900 center text-center text-white justify-content-center align-content-center">
     <div class="h-full w-full flex items-center justify-center">
-        <img src="/img1.jpg" alt="" class="h-full w-full">
+        <img src="https://http2.mlstatic.com/D_NQ_699230-MLA83299690486_042025-OO.webp" alt="" class="h-full w-full">
        <!-- <h1 class="text-3xl font-bold underline">
             <p>banner-informativo works!</p>
         </h1> -->
