--- a/src/app/produto-mes/produto-mes.component.html
+++ b/src/app/produto-mes/produto-mes.component.html
@@ -37,7 +37,8 @@
               </div>
           </div>
       </div>
-      <div class="col-3" (mouseenter)="isHovered = true"
+      <div class="col-3" 
+      (mouseenter)="isHovered = true"
       (mouseleave)="isHovered = false">
           <div class="relative border-round-lg shadow-none overflow-hidden transition-all duration-300 "
            > 
