--- a/src/app/components/produtos/produtos.component.html
+++ b/src/app/components/produtos/produtos.component.html
@@ -1,17 +1,24 @@
 
 <div class="bg-white3">
-  <div class="card flex justify-content-center align-items-center border-round-sm shadow-none bg-white3">
+  <div class="card flex justify-content-center align-items-center border-round-sm shadow-none bg-white3 pt-4">
     <div>
-      Lorem ipsum dolor sit amet, consectetur adipiscing
+      <p-button icon="pi pi-wallet" severity="info" [outlined]="true" [rounded]="true" class="justify-content-center flex"></p-button>
+      <p class="text-2xl font-bold">MultiCaixa</p>
+      <p class="text-sm">Referencia ou Express</p>
     </div>
-    <p-divider layout="vertical" />
-    <div class="flex flex-column align-items-center justify-content-center">
+    <p-divider layout="vertical" type="solid"/>
+    <div class="flex flex-column align-items-center justify-content-center border-left-1  border-right-1 border-solid-200 px-4 border-blue-300">
       <p-button icon="pi pi-heart" [rounded]="true" severity="info" [outlined]="true"
-        class=""></p-button> <p class="text-2xl">Suporte 24/24</p>
+        class=""></p-button>
+         <p class="text-2xl font-bold">Suporte Online</p>
+        <p>Dúvidas? Podemos ajudar!
+        </p>
     </div>
-    <p-divider layout="vertical" />
+    <p-divider layout="vertical" type="solid" />
     <div>
-      At vero eos et accusamus et
+      <p-button icon="pi pi-truck" severity="info" [outlined]="true" [rounded]="true" class="justify-content-center flex"></p-button>
+    <p class="text-2xl font-bold">Entrega Express</p>
+    <p>Entrega em até 5h (dias úteis)</p>
     </div>
   </div>
   <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:p-4">
