Opacidade inicial visivel e ao passar o mouse fica para 75%

--- a/src/app/components/produtos/produtos.component.html
+++ b/src/app/components/produtos/produtos.component.html
@@ -27,7 +27,7 @@
       <div class="group relative">
         <img src="https://tailwindcss.com/plus-assets/img/ecommerce-images/product-page-01-related-product-01.jpg"
           alt="Front of men&#039;s Basic Tee in black."
-          class="aspect-square w-full rounded-md bg-gray-200 object-cover group-hover:opacity-75 lg:aspect-auto lg:h-80  hover:shadow-xl">
+          class="aspect-square w-full rounded-md bg-gray-200 object-cover opacity-75 group-hover:opacity-100 lg:aspect-auto lg:h-80  hover:shadow-xl">
         <div class="mt-4 flex justify-between  hover:shadow-xl px-4 rounded-md hover:bg-white object-cover">
           <div>
             <h3 class="text-sm text-gray-700">
@@ -44,7 +44,7 @@
       <div class="group relative">
         <img src="https://tailwindcss.com/plus-assets/img/ecommerce-images/product-page-01-related-product-01.jpg"
           alt="Front of men&#039;s Basic Tee in black."
-          class="aspect-square w-full rounded-md bg-gray-200 object-cover group-hover:opacity-75 lg:aspect-auto lg:h-80  hover:shadow-xl">
+          class="aspect-square w-full rounded-md bg-gray-200 object-cover opacity-75 group-hover:opacity-100 lg:aspect-auto lg:h-80  hover:shadow-xl">
         <div class="mt-4 flex justify-between  hover:shadow-xl px-4 rounded-md hover:bg-white">
           <div>
             <h3 class="text-sm text-gray-700">
@@ -61,7 +61,7 @@
       <div class="group relative">
         <img src="https://tailwindcss.com/plus-assets/img/ecommerce-images/product-page-01-related-product-01.jpg"
           alt="Front of men&#039;s Basic Tee in black."
-          class="aspect-square w-full rounded-md bg-gray-200 object-cover group-hover:opacity-75 lg:aspect-auto lg:h-80  hover:shadow-xl">
+          class="aspect-square w-full rounded-md bg-gray-200 object-cover opacity-75 group-hover:opacity-100 lg:aspect-auto lg:h-80  hover:shadow-xl">
         <div class="mt-4 flex justify-between  hover:shadow-xl px-4 rounded-md hover:bg-white">
           <div>
             <h3 class="text-sm text-gray-700">
@@ -78,7 +78,7 @@
       <div class="group relative">
         <img src="https://tailwindcss.com/plus-assets/img/ecommerce-images/product-page-01-related-product-01.jpg"
           alt="Front of men&#039;s Basic Tee in black."
-          class="aspect-square w-full rounded-md bg-gray-200 object-cover group-hover:opacity-75 lg:aspect-auto lg:h-80  hover:shadow-xl">
+          class="aspect-square w-full rounded-md bg-gray-200 object-cover opacity-75 group-hover:opacity-100 lg:aspect-auto lg:h-80  hover:shadow-xl">
         <div class="mt-4 flex justify-between  hover:shadow-xl px-4 rounded-md hover:bg-white">
           <div>
             <h3 class="text-sm text-gray-700">
@@ -95,7 +95,7 @@
       <div class="group relative">
         <img src="https://tailwindcss.com/plus-assets/img/ecommerce-images/product-page-01-related-product-01.jpg"
           alt="Front of men&#039;s Basic Tee in black."
-          class="aspect-square w-full rounded-md bg-gray-200 object-cover group-hover:opacity-75 lg:aspect-auto lg:h-80  hover:shadow-xl">
+          class="aspect-square w-full rounded-md bg-gray-200 object-cover opacity-75 group-hover:opacity-100 lg:aspect-auto lg:h-80  hover:shadow-xl">
         <div class="mt-4 flex justify-between  hover:shadow-xl px-4 rounded-md hover:bg-white">
           <div>
             <h3 class="text-sm text-gray-700">
