--- a/src/app/components/carrocel-produtos/carrocel-produtos.component.html
+++ b/src/app/components/carrocel-produtos/carrocel-produtos.component.html
@@ -1,15 +1,15 @@
 
 
 
-<div class="max-w-7xl p-4 bg-white shadow-none border-round-sm  ">
+<div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:p-4">
     <div>
       <h2 class="font-semibold leading-8 text-gray-900 text-4xl">Related products</h2>
  <!--      <p class="mt-2 text-base leading-7 text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Quisquam, voluptatibus.</p> -->
     </div>
-</div>
 
-    <p-carousel [value]="products" [numVisible]="3" [numScroll]="2"  [responsiveOptions]="responsiveOptions" [circular]="true" [showIndicators]="true" [styleClass]="'custom-carousel'" >
+
+    <p-carousel [value]="products" [numVisible]="4" [numScroll]="2"  [responsiveOptions]="responsiveOptions" [circular]="true" [showIndicators]="true" [styleClass]="'custom-carousel'" autoplayInterval="3000" >
 
         <ng-template let-product #item>
             <div class=" border border-surface-300 border-dashed dark:border-surface-700 rounded m-2 p-4 hover:shadow-xl">
@@ -30,4 +30,4 @@
             </div>
         </ng-template>
     </p-carousel>
-    
+</div>   
