--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,68 @@
-<p>footer works!</p>
+<div class="footer">
+    <div class="card flex justify-content-center align-items-center border-round-sm shadow-none bg-white3 pt-4">
+        <div class="px-4">
+            <p-button icon="pi pi-wallet" severity="info" [outlined]="true" [rounded]="true"
+                class="justify-content-center flex"></p-button>
+            <p class="text-2xl font-bold">Pagamento Seguro</p>
+            <p class="text-sm">Diversas formas de pagamento</p>
+        </div>
+        <div
+            class="flex flex-column align-items-center justify-content-center border-left-1  border-right-1 border-solid-200 px-4 border-blue-300">
+            <p-button icon="pi pi-heart" [rounded]="true" severity="info" [outlined]="true" class=""></p-button>
+            <p class="text-2xl font-bold">Suporte Online</p>
+            <p>Dúvidas? Podemos ajudar!
+            </p>
+        </div>
+
+        <div
+            class="flex flex-column align-items-center justify-content-center border-left-1  border-right-1 border-solid-200 px-4 border-blue-300">
+
+            <p-button icon="pi pi-truck" severity="info" [outlined]="true" [rounded]="true"
+                class="justify-content-center flex"></p-button>
+            <p class="text-2xl font-bold">Compra Protegida</p>
+            <p>7 dias para devolução</p>
+        </div>
+        <div class="px-4">
+            <p-button icon="pi pi-truck" severity="info" [outlined]="true" [rounded]="true"
+                class="justify-content-center flex"></p-button>
+            <p class="text-2xl font-bold">Envio Rápido</p>
+            <p>Em todo País</p>
+        </div>
+    </div>
+    <p-divider type="solid" />
+    <div class="grid grid-nogutter justify-content-center my-4 ">
+        <div class="col-12 md:col-4 pl-8 ">
+            <p class="text-lg font-bold">E-commerce</p>
+            <p class="text-sm">Sua loja online para compras de produtos eletrônicos, moda e artigos para casa com os melhores preços e entregas rápidas.</p>
+            <div class="flex justify-content-center gap-3 mt-2">
+                <i class="pi pi-facebook text-2xl"></i>
+                <i class="pi pi-twitter text-2xl"></i>
+                <i class="pi pi-instagram text-2xl"></i>
+                <i class="pi pi-linkedin text-2xl"></i>
+            </div>
+        </div>
+        <div class="col-12 md:col-2 text-left justify-center">
+            <p class="text-lg font-bold">Ajuda</p>
+            <ul class="list-none p-0 m-0">
+            <li><a href="/" class="text-sm text-black-500 hover:text-blue-900 hover:font-bold">Início</a></li>
+            <li><a href="/sobre-nos" class="text-sm text-black-500 hover:text-blue-900 hover:font-bold">Sobre Nós</a></li>
+            <li><a href="/contato" class="text-sm text-black-500 hover:text-blue-900 hover:font-bold">Contato</a></li>
+            <li><a href="/faq" class="text-sm text-black-500 hover:text-blue-900 hover:font-bold">FAQ</a></li>
+            <li><a href="/blog" class="text-sm text-black-500 hover:text-blue-900 hover:font-bold">Blog</a></li>
+            </ul>
+        </div>
+       
+        <div class="col-12 md:col-3">
+            <p class="text-lg font-bold">Políticas</p>
+           <p><i class="pi pi-map-marker text-lg mr-2 text-blue-500"></i>  Av. Paulista, 1000, São Paulo - SP, Brasil</p>
+            <p><i class="pi pi-phone text-lg mr-2 text-blue-500"></i> (11) 99999-9999</p>
+
+<p><i class="pi pi-envelope text-lg mr-2 text-blue-500"></i> contatoshopmaster.com</p>
+
+        </div>
+        <div class="col-12 md:col-3">
+            <p class="text-lg font-bold">Contato</p>
+            <p class="text-sm">Fale conosco</p>
+        </div>
+    </div>
+</div>
