--- a/src/app/layout/footer/footer.component.css
+++ b/src/app/layout/footer/footer.component.css
@@ -1,3 +1,6 @@
 .footer{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(250, 248, 248);
 }
+.space-right2{
+   letter-spacing: 30px;
+}	
