--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -29,8 +29,10 @@
             <p>Em todo País</p>
         </div>
     </div>
+    <p-divider type="solid" class="mb-1"/>
+    <span class="text-center justify-content-center flex text-blue-900 font-bold space-right2">...</span>
     <p-divider type="solid" />
-    <div class="grid grid-nogutter justify-content-center my-4 ">
+    <div class="grid grid-nogutter justify-content-center mt-2 ">
         <div class="col-12 md:col-4 pl-8 ">
             <p class="text-lg font-bold">E-commerce</p>
             <p class="text-sm">Sua loja online para compras de produtos eletrônicos, moda e artigos para casa com os melhores preços e entregas rápidas.</p>
