--- a/src/app/components/carrocel-produtos/carrocel-produtos.component.html
+++ b/src/app/components/carrocel-produtos/carrocel-produtos.component.html
@@ -3,8 +3,10 @@
 
 <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:p-4">
     <div>
-      <h2 class="font-semibold leading-8 text-gray-900 text-4xl">Related products</h2>
- <!--      <p class="mt-2 text-base leading-7 text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        <div class="flex justify-content-between py-2">
+            <h4 class="font-semibold leading-8 text-gray-900 text-4xl bg-auto"> Explore artigos extraordinários a preços especiais </h4>
+            <p-button  severity="contrast"  [rounded]="true" [size]="'small'"  [outlined]="false">Explore agora <i class="pi pi-arrow-right"></i> </p-button>
+          </div> <!--      <p class="mt-2 text-base leading-7 text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Quisquam, voluptatibus.</p> -->
     </div>
 
