Adicionando menus com submenus

--- a/src/app/components/banner-informativo/banner-informativo.component.html
+++ b/src/app/components/banner-informativo/banner-informativo.component.html
@@ -1,6 +1,7 @@
-<div class="banner-informativos h-[35rem] pt-4 bg-blue-900 center text-center text-white justify-content-center align-content-center">
+
+<div class="banner-informativos h-[35rem] pt-7 bg-blue-900 center text-center text-white justify-content-center align-content-center">
     <div class="h-full w-full flex items-center justify-center">
-        <img src="https://http2.mlstatic.com/D_NQ_699230-MLA83299690486_042025-OO.webp" alt="" class="h-full w-full">
+        <img src="https://m.media-amazon.com/images/I/61dv6XKzDeL._SX3000_.jpg" alt="" class="h-full w-full">
        <!-- <h1 class="text-3xl font-bold underline">
             <p>banner-informativo works!</p>
         </h1> -->
@@ -10,6 +11,9 @@
 <div>
 
   </div> 
+  <div class="card">
+    <p-megamenu [model]="items" />
+</div>
 <!--     <div class="bg-gradient-to-r from-red-500 to-pink-500 via-purple-500 h-96"></div>
  -->
 
