--- a/src/app/produto-mes/produto-mes.component.html
+++ b/src/app/produto-mes/produto-mes.component.html
@@ -1,7 +1,7 @@
 <div class="max-w-7xl mx-auto py-3 shadow-none">
   <div class="mb-3">
     <p class="text-sm text-gray-500">Escolhas dos editores</p>
-    <h2 class="text-3xl font-bold text-gray-900 mt-2">Achados essenciais de Páscoa</h2>
+    <h2 class="text-3xl font-bold text-gray-900 mt-2">Achados essenciais do mês de Abril</h2>
     <h6 class="text-gray-900 hover:font-bold">Ver detalhes 
       <i class="pi pi-arrow-right hover:translate-x-2 transition-transform duration-300"></i>
     </h6>
