--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,10 @@
 .main{
 /*     margin-top: 50px;
- */    background: linear-gradient(to right, #ffeeee, #e3e2ff);
-    width: 100%;
+ */    
+/*  background: linear-gradient(to right, #ffeeee, #e3e2ff);
+ */
+ background-color: aliceblue;   
+  width: 100%;
     /* min-height: 100%;
     display: flex; */
     justify-content: center;
