--- a/src/app/components/produtos/produtos.component.html
+++ b/src/app/components/produtos/produtos.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="card flex justify-content-center align-items-center border-round-sm shadow-none bg-white3 py-4">
+  <div class="card flex justify-content-center align-items-center border-round-sm shadow-none bg-white3 pt-4">
     <div>
       <p-button icon="pi pi-wallet" severity="info" [outlined]="true" [rounded]="true"
         class="justify-content-center flex"></p-button>
@@ -22,14 +22,15 @@
       <p>Entrega em até 5h (dias úteis)</p>
     </div>
   </div>
+  <p-divider type="dotted" />
 </div>
-<div class="bg-white-alpha-80">
+<!-- <div class="bg-white-alpha-80">
   <div class="mx-auto max-w-2xl sm:px-6 sm:py-24 lg:max-w-7xl lg:p-4">
     <div class="flex justify-content-between">
-      <h4 class="font-semibold leading-8 text-gray-900 text-4xl bg-auto"> Novos Produtos</h4>
+      <h4 class="font-semibold leading-8 text-gray-900 text-3xl bg-auto"> Novos Produtos</h4>
       <p-button  severity="contrast"  [rounded]="true" [size]="'small'"  [outlined]="false">Explore agora <i class="pi pi-arrow-right"></i> </p-button>
     </div>
-    <div class="my-6 grid grid-cols-1 gap-x-6 gap-y-4 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-4">
+    <div class="my-4 grid grid-cols-1 gap-x-6 gap-y-2 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-4">
       <div class="group relative " *ngFor="1 let i of [].constructor(10);">
         <img src="https://tailwindcss.com/plus-assets/img/ecommerce-images/product-page-01-related-product-01.jpg"
           alt="Front of men&#039;s Basic Tee in black."
@@ -50,34 +51,24 @@
 
     </div>
   </div>
+</div> -->
+<app-produtos-novos></app-produtos-novos>
+<div class="bg-white">
+
+  <app-carrocel-produtos></app-carrocel-produtos>
 </div>
-<div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:p-6 mt-5 bg-blue-400 border-round-3xl">
-  <div class="flex  justify-content-between">
-    <div>
-      <h2 class="font-semibold leading-8 text-white text-4xl font-bold ">Há um acordo para você também</h2>
-      <h6 class="text-white font-italic"> Não perca a chance de economizar em itens que você está procurando.</h6>
-    </div>
-    <div>
-
-      <p-button severity="contrast" [text]="true" [rounded]="true" [outlined]="false">Explore agora <i
-          class="pi pi-arrow-right"></i> </p-button>
-    </div>
-
-  </div>
-</div>
-
 
   <div class="mx-auto max-w-2xl px-2 sm:px-6 sm:py-24 lg:max-w-7xl lg:p-1">
   <div class="flex  justify-content-between py-4">
-    <h3 class="font-semibold leading-8 text-gray-900 text-4xl bg-auto"> Produtos Mais Solitados</h3>
+    <h3 class="font-semibold leading-8 text-gray-900 text-3xl bg-auto"> Produtos mais vendido</h3>
     <p-button  severity="contrast" [text]="true"  [rounded]="true"  [outlined]="false">Explore agora <i class="pi pi-arrow-right"></i> </p-button>
   </div>
-    <div class="mt-1 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
+    <div class="mt-1 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-2">
 
       <div class="group relative " *ngFor="let i of [].constructor(10); let index = index"
         (mouseenter)="hoveredIndex = index" (mouseleave)="hoveredIndex = -1">
         <div
-          class="w-58 lg:h-80 object-cover group-hover:opacity-100 hover:shadow-2xl lg:aspect-auto rounded-md bg-white aspect-square align-content-center center">
+          class="w-62 lg:h-80 object-cover group-hover:opacity-100 hover:shadow-2xl lg:aspect-auto rounded-md bg-white aspect-square align-content-center center">
           <img
             src="https://ncrangola.vtexassets.com/arquivos/ids/164712-198-198?v=638753999597100000&width=198&height=198&aspect=true"
             alt="Front of men&#039;s Basic Tee in black." class="w-48 pt-2 mx-auto">
@@ -114,11 +105,22 @@
       <!-- More products... -->
     </div>
   </div>
+  <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:p-6 mt-5 bg-blue-400 border-round-3xl">
+    <div class="flex  justify-content-between">
+      <div>
+        <h2 class="font-semibold leading-8 text-white text-4xl font-bold ">Há um acordo para você também</h2>
+        <h6 class="text-white font-italic"> Não perca a chance de economizar em itens que você está procurando.</h6>
+      </div>
+      <div>
+  
+        <p-button severity="contrast" [text]="true" [rounded]="true" [outlined]="false">Explore agora <i
+            class="pi pi-arrow-right"></i> </p-button>
+      </div>
+  
+    </div>
+  </div>
 
-<div class="bg-white">
 
-  <app-carrocel-produtos></app-carrocel-produtos>
-</div>
 <app-produto-mes></app-produto-mes>
 <app-multi-opcoes-produtos></app-multi-opcoes-produtos>
 <!-- <div class="py-4"></div> -->
